Created the library skeleton.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,20 @@
 
 # Pandoc outputs
 *.html
+
+# Python object files
+__pycache__/
+*.py[cod]
+
+# Python distutils
+build/
+
+# Python setuptools
+dist/
+*.egg-info/
+
+# pytest artifacts
+.pytest_cache/
+
+# tox artifacts
+.tox/
