--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,9 +13,6 @@ jobs:
         with:
           python-version: 3.8
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        uses: py-actions/py-dependency-install@v2.0.2
       - name: Run the test suite
         run: PYTHONPATH=src pytest
