--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -13,9 +13,14 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        uses: py-actions/py-dependency-install@v2.0.2
       - name: Lint code base
         uses: docker://github/super-linter:v3.3.0
         env:
           VALIDATE_MD: true
           VALIDATE_YAML: true
-          VALIDATE_PYTHON: true
