Configured path patterns for the linter workflow.

--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -4,8 +4,18 @@ name: Linter
 on:
   push:
     branches: [master]
+    paths:
+      - '**.md'
+      - '**.py'
+      - '**.yaml'
+      - '**.yml'
   pull_request:
     branches: [master]
+    paths:
+      - '**.md'
+      - '**.py'
+      - '**.yaml'
+      - '**.yml'
 jobs:
   lint:
     name: Lint code base
